fixed the jumpy hamburger

--- a/wp-content/themes/kkart/assets/scss/main.scss
+++ b/wp-content/themes/kkart/assets/scss/main.scss
@@ -77,16 +77,12 @@
         }
 
         &.mobileMenu{
+            z-index: 4;
             transition: .4s ease;
             height:0; 
             @media screen and (max-width: 509px){
                 height: 34vh;
             }
-            transition: 1.3s ease;
-            background-color: #fff;
-            width: 100%;
-            height: 42vh;
-            left: 0;
         }
     }
 
@@ -111,6 +107,7 @@
         img{
             cursor: pointer;
         }
+
     }
 
     .logoDesktop{
@@ -142,6 +139,7 @@
             position: absolute;
             left: 0;
             margin-top: -108px;
+            background-color: #fff;
         }
 
 
